updated grammar issue and fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,8 @@ nav {
 	text-align: center;
 	color: white;
 	padding-top: 38px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .button-noise {
